fixed alignment of auth page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,15 @@
   display: flex;
 }
 
+#auth-page {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+
 .vertical-line {
   border-left: 2px solid lightgray;
 }
